FIX: fixing gap articles

--- a/components/article/_article.scss
+++ b/components/article/_article.scss
@@ -49,7 +49,8 @@
     flex-direction: row;
     display: flex;
     max-width: 1400px;
-    overflow-x: scroll;
+    overflow-x: hidden;
     margin: auto;
+    gap: 1.5rem;
 }
 }
